--- a/data-cleaning-and-feature-engineering.ipynb
+++ b/data-cleaning-and-feature-engineering.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create df with patient age\n",
+    "### Create DataFrame with patient age\n",
     "Age df will be necessary to tell if patients had medical conditions for over 1 year"
    ]
   },
@@ -795,7 +795,7 @@
     }
    ],
    "source": [
-    "# demographic info is in this df - get participant age\n",
+    "# demographic info is in this df - get participant age RIDAGEYR\n",
     "\n",
     "demo_j"
    ]
@@ -979,7 +979,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create df with target"
+    "### Create DataFrame with target"
    ]
   },
   {
@@ -4366,7 +4366,7 @@
     "# minority class is very small\n",
     "\n",
     "# credit to Kevin Anipara for code\n",
-    "# (https://medium.com/@kvnamipara/a-better-visualisation-of-pie-charts-by-matplotlib-935b7667d77f)\n",
+    "# https://medium.com/@kvnamipara/a-better-visualisation-of-pie-charts-by-matplotlib-935b7667d77f\n",
     "\n",
     "plt.rcParams['font.size'] = 15\n",
     "\n",
